@@ -978,7 +978,8 @@
                         </dependency>
                     </dependencies>
                     <configuration>
-                        <showWeaveInfo>true</showWeaveInfo>
+                        <showWeaveInfo>false</showWeaveInfo>
+                        <verbose>false</verbose>
                         <source>1.6</source>
                         <XnoInline>true</XnoInline>
                         <complianceLevel>1.6</complianceLevel>
@@ -1089,6 +1090,7 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <runOrder>alphabetical</runOrder>
+		    <argLine>-Xms2G -Xmx6G -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:NewRatio=1 -XX:+UseParallelGC -XX:+UseParallelOldGC -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps</argLine>
                     <threadCount>${test.threadcount}</threadCount>
                     <systemPropertyVariables>
                         <emma.rt.control>false</emma.rt.control>
